# Pix2Ascii

./: .gitignore  CMakeLists.txt  Makefile  README.md  run_linters.sh
project/: main.c  utils.h
project/include/: argparsing.h  error.h  frame_processing.h  frame_utils.h  status_codes.h  struct.h  termstream.h  timestamps.h  utils.h  video_stream.h  videostream.h
project/src/: argparsing.c  frame_processing.c  frame_utils.c  main.c  termstream.c  timestamps.c  video_stream.c  videostream.c
